{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 978,
  "lineage": "206860a2-6e3a-e232-4526-dfc743d12a3f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063ea8c34dfdcc0b1",
            "domain": "vpc",
            "id": "eipalloc-063ea8c34dfdcc0b1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-214-182-235.compute-1.amazonaws.com",
            "public_ip": "18.214.182.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "review-eip-us-east-1a"
            },
            "tags_all": {
              "Name": "review-eip-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_cloudwatch_log_group.ecs",
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet",
            "aws_ecs_task_definition.app",
            "aws_iam_role.ecs_exec_role",
            "aws_iam_role.ecs_task_role",
            "aws_internet_gateway.main",
            "aws_security_group.ecs_node_sg",
            "aws_security_group.ecs_task",
            "aws_security_group.rds_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ecs_task_doc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027c7d8cbcbcd7d9d",
            "domain": "vpc",
            "id": "eipalloc-027c7d8cbcbcd7d9d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-197-71-87.compute-1.amazonaws.com",
            "public_ip": "44.197.71.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "review-eip-us-east-1b"
            },
            "tags_all": {
              "Name": "review-eip-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_cloudwatch_log_group.ecs",
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet",
            "aws_ecs_task_definition.app",
            "aws_iam_role.ecs_exec_role",
            "aws_iam_role.ecs_task_role",
            "aws_internet_gateway.main",
            "aws_security_group.ecs_node_sg",
            "aws_security_group.ecs_task",
            "aws_security_group.rds_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ecs_task_doc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:internet-gateway/igw-0ba775428bb794702",
            "id": "igw-0ba775428bb794702",
            "owner_id": "307946673854",
            "tags": {
              "Name": "review-igw"
            },
            "tags_all": {
              "Name": "review-igw"
            },
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "dependencies": [
            "aws_cloudwatch_log_group.ecs",
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet",
            "aws_ecs_task_definition.app",
            "aws_iam_role.ecs_exec_role",
            "aws_iam_role.ecs_task_role",
            "aws_security_group.ecs_node_sg",
            "aws_security_group.ecs_task",
            "aws_security_group.rds_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ecs_task_doc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:307946673854:loadbalancer/app/review-alb/d373fb344eb28108",
            "arn_suffix": "app/review-alb/d373fb344eb28108",
            "desync_mitigation_mode": "defensive",
            "dns_name": "review-alb-1465867604.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:307946673854:loadbalancer/app/review-alb/d373fb344eb28108",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "review-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f5f27cd8552d99f9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a1899293855982e"
              },
              {
                "subnet_id": "subnet-09c312e30b3f82da7"
              }
            ],
            "subnets": [
              "subnet-05a1899293855982e",
              "subnet-09c312e30b3f82da7"
            ],
            "vpc_id": "vpc-075c2df9057c0a566",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.http",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:307946673854:listener/app/review-alb/d373fb344eb28108/2119f2922ffbd57f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:307946673854:targetgroup/review20241012164955112500000007/4cb0ec06fc27ef35",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:307946673854:listener/app/review-alb/d373fb344eb28108/2119f2922ffbd57f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:307946673854:loadbalancer/app/review-alb/d373fb344eb28108",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.http",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:307946673854:targetgroup/review20241012164955112500000007/4cb0ec06fc27ef35",
            "arn_suffix": "targetgroup/review20241012164955112500000007/4cb0ec06fc27ef35",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:307946673854:targetgroup/review20241012164955112500000007/4cb0ec06fc27ef35",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "review20241012164955112500000007",
            "name_prefix": "review",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:route-table/rtb-063854635198f2184",
            "id": "rtb-063854635198f2184",
            "owner_id": "307946673854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba775428bb794702",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "review-rt-private"
            },
            "tags_all": {
              "Name": "review-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_cloudwatch_log_group.ecs",
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet",
            "aws_ecs_task_definition.app",
            "aws_iam_role.ecs_exec_role",
            "aws_iam_role.ecs_task_role",
            "aws_internet_gateway.main",
            "aws_security_group.ecs_node_sg",
            "aws_security_group.ecs_task",
            "aws_security_group.rds_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ecs_task_doc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:route-table/rtb-0ebfdc65dae226af7",
            "id": "rtb-0ebfdc65dae226af7",
            "owner_id": "307946673854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba775428bb794702",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "review-rt-public"
            },
            "tags_all": {
              "Name": "review-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_cloudwatch_log_group.ecs",
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet",
            "aws_ecs_task_definition.app",
            "aws_iam_role.ecs_exec_role",
            "aws_iam_role.ecs_task_role",
            "aws_internet_gateway.main",
            "aws_security_group.ecs_node_sg",
            "aws_security_group.ecs_task",
            "aws_security_group.rds_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ecs_task_doc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0675a74d90dea8c8d",
            "route_table_id": "rtb-063854635198f2184",
            "subnet_id": "subnet-020c2aec93f9ee73a"
          },
          "dependencies": [
            "aws_cloudwatch_log_group.ecs",
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet",
            "aws_ecs_task_definition.app",
            "aws_iam_role.ecs_exec_role",
            "aws_iam_role.ecs_task_role",
            "aws_internet_gateway.main",
            "aws_route_table.private",
            "aws_security_group.ecs_node_sg",
            "aws_security_group.ecs_task",
            "aws_security_group.rds_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ecs_task_doc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b55875b814b08629",
            "route_table_id": "rtb-063854635198f2184",
            "subnet_id": "subnet-0d99b42f22ed91221"
          },
          "dependencies": [
            "aws_cloudwatch_log_group.ecs",
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet",
            "aws_ecs_task_definition.app",
            "aws_iam_role.ecs_exec_role",
            "aws_iam_role.ecs_task_role",
            "aws_internet_gateway.main",
            "aws_route_table.private",
            "aws_security_group.ecs_node_sg",
            "aws_security_group.ecs_task",
            "aws_security_group.rds_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ecs_task_doc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4e80b62734992e3",
            "route_table_id": "rtb-0ebfdc65dae226af7",
            "subnet_id": "subnet-09c312e30b3f82da7"
          },
          "dependencies": [
            "aws_cloudwatch_log_group.ecs",
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet",
            "aws_ecs_task_definition.app",
            "aws_iam_role.ecs_exec_role",
            "aws_iam_role.ecs_task_role",
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_security_group.ecs_node_sg",
            "aws_security_group.ecs_task",
            "aws_security_group.rds_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ecs_task_doc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c436f9e2ba6254b2",
            "route_table_id": "rtb-0ebfdc65dae226af7",
            "subnet_id": "subnet-05a1899293855982e"
          },
          "dependencies": [
            "aws_cloudwatch_log_group.ecs",
            "aws_db_instance.mysql",
            "aws_db_subnet_group.rds_subnet",
            "aws_ecs_task_definition.app",
            "aws_iam_role.ecs_exec_role",
            "aws_iam_role.ecs_task_role",
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_security_group.ecs_node_sg",
            "aws_security_group.ecs_task",
            "aws_security_group.rds_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_iam_policy_document.ecs_task_doc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:security-group/sg-016ad17b0ffe25e41",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-016ad17b0ffe25e41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Bastion Host SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.3.0/24",
                  "10.10.4.0/24"
                ],
                "description": "Bastion Host SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "review-ecs-node-sg-2024101216500641350000000a",
            "name_prefix": "review-ecs-node-sg-",
            "owner_id": "307946673854",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:security-group/sg-075a20753164defbf",
            "description": "Allow all traffic within the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075a20753164defbf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.10.3.0/24",
                  "10.10.4.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ecs-task-sg-20241012164955113000000008",
            "name_prefix": "ecs-task-sg-",
            "owner_id": "307946673854",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:security-group/sg-0f5f27cd8552d99f9",
            "description": "Allow all HTTP/HTTPS traffic from public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5f27cd8552d99f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "review-http-sg-20241012164955118200000009",
            "name_prefix": "review-http-sg-",
            "owner_id": "307946673854",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:security-group/sg-0b68f18c91ce33673",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output from MySQL",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b68f18c91ce33673",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-016ad17b0ffe25e41",
                  "sg-075a20753164defbf"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Bastion Host SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-016ad17b0ffe25e41"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "review-rds-sg",
            "name_prefix": "",
            "owner_id": "307946673854",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-reviews"
            },
            "tags_all": {
              "Name": "app-reviews"
            },
            "timeouts": null,
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_node_sg",
            "aws_security_group.ecs_task",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-020c2aec93f9ee73a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020c2aec93f9ee73a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "review-private-us-east-1a"
            },
            "tags_all": {
              "Name": "review-private-us-east-1a"
            },
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-0d99b42f22ed91221",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d99b42f22ed91221",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "review-private-us-east-1b"
            },
            "tags_all": {
              "Name": "review-private-us-east-1b"
            },
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-09c312e30b3f82da7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c312e30b3f82da7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "review-public-us-east-1a"
            },
            "tags_all": {
              "Name": "review-public-us-east-1a"
            },
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-05a1899293855982e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a1899293855982e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "review-public-us-east-1b"
            },
            "tags_all": {
              "Name": "review-public-us-east-1b"
            },
            "vpc_id": "vpc-075c2df9057c0a566"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:vpc/vpc-075c2df9057c0a566",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0f0fb8afdec20cf01",
            "default_route_table_id": "rtb-0bab06b16e7ae84fe",
            "default_security_group_id": "sg-01087f7d763fa4130",
            "dhcp_options_id": "dopt-018c17b64c4b66faf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-075c2df9057c0a566",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bab06b16e7ae84fe",
            "owner_id": "307946673854",
            "tags": {
              "Name": "review-vpc"
            },
            "tags_all": {
              "Name": "review-vpc"
            }
          }
        }
      ]
    }
  ]
}